--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-qrcode-svg": "^6.3.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~3.29.0",
